--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    return folium.CircleMarker(location = [40.7589, -73.9851], radius = 10)\n",
+    "    return folium.CircleMarker(location, radius = 6)\n",
     "    "
    ]
   },
