--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    return [trip['pickup_latitude'], trip['pickup_longitude']]\n",
+    "    y = trip['pickup_latitude'] trip['pickup_longitude']]\n",
     "   "
    ]
   },
