--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,12 +449,13 @@
     "    y = trip['pickup_latitude']\n",
     "    z = trip['pickup_longitude']\n",
     "    x.append(y)\n",
-    "    x.append(z) "
+    "    x.append(z) \n",
+    "    return x "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +464,7 @@
        "[40.64499, -73.78115]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
        "6"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
