--- a/index.ipynb
+++ b/index.ipynb
@@ -510,7 +510,7 @@
     "\n",
     "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
     "times_square_marker and json.loads(str(times_square_marker.options['radius']))\n",
-    "# 6"
+    "print(trip)"
    ]
   },
   {
