--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,9 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marker(location(trip)), trips))\n"
+    "    return list(map(lambda trip: to_mlocation(trip)), trips))\n",
+    " locations = list(map(lambda trip: location(trip), trips))\n",
+    "    return list(map(lambda location: to_marker(location),locations))"
    ]
   },
   {
