--- a/index.ipynb
+++ b/index.ipynb
@@ -519,21 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-97-348de8910b48>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-97-348de8910b48>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    locations = list(map(lambda trip: location(trip) trips))\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    locations = list(map(lambda trip: location(trip) trips))\n",
+    "    locations = list(map(lambda trip: location(trip), trips))\n",
     "    return list(map(lambda location: to_marker(location),locations))"
    ]
   },
